--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta content="telephone=no" name="format-detection">
 <meta name="keywords" content="老花,散光,隱形眼鏡,博士倫,老花" />
-<meta name="description" content="你也有老花、散光困擾嗎？愛美又不想犧牲視覺品質，隱形眼鏡是你的選擇！選擇合適的隱形眼鏡產品，一副解決、輕鬆矯正老花和散光，給你一整天的清晰視覺！">
+<meta name="description" content="市面上益生菌產品參差不齊，常見菌數標示不實、誇大療效，甚至還有濫用輕瀉劑造成食用者傷害的問題。而營養師輕食的負責人-江欣樺擁有10年預防醫學背景，以及保健食品研發實戰經驗，帶你破解益生菌的社會亂象，一場由益生菌作為前哨站的保健食品革命就此展開。">
 <meta property="og:title" content="益生菌革命保健食品全解析  - 康健雜誌">
-<meta property="og:description" content="你也有老花、散光困擾嗎？愛美又不想犧牲視覺品質，隱形眼鏡是你的選擇！選擇合適的隱形眼鏡產品，一副解決、輕鬆矯正老花和散光，給你一整天的清晰視覺！">
+<meta property="og:description" content="市面上益生菌產品參差不齊，常見菌數標示不實、誇大療效，甚至還有濫用輕瀉劑造成食用者傷害的問題。而營養師輕食的負責人-江欣樺擁有10年預防醫學背景，以及保健食品研發實戰經驗，帶你破解益生菌的社會亂象，一場由益生菌作為前哨站的保健食品革命就此展開。">
 <meta property="og:image" content="images/fb.jpg">
 <link rel="image_src" href="images/fb.jpg">
 <link rel="shortcut icon" href="https://www.commonhealth.com.tw/assets/images/favicon.ico" />
@@ -69,7 +69,7 @@
 		</div>
 	   <div class="doctor">
          <img class="animated fadeInUp" src="images/doctor.webp" alt="江欣樺營養師">
-		 <div class="dialog animated fadeIndown"><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
+		 <div class="dialog "><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
 		 <div class="logline"></div>
 		</div>
 	     </div>
