--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
 	<!--kv-->
 	<div class="maincheck " id="kv">
 		<div class="contain flex">
-		<div class="title"  data-aos="fade-down" data-aos-duration="1000">
+		<div class="title">
 			<h1>益生菌<br>革命</h1>
 			<h2>保健食品全解析</h2>
 			<p>市面上益生菌產品參差不齊，常見菌數標示不實、誇大療效，甚至還有濫用輕瀉劑造成食用者傷害的問題。</p>
 			<p>而營養師輕食的負責人-江欣樺擁有10年預防醫學背景，以及保健食品研發實戰經驗，帶你破解益生菌的社會亂象，一場由益生菌作為前哨站的保健食品革命就此展開。</p>  
 		</div>
 	   <div class="doctor">
-         <img  data-aos="fade-up" data-aos-duration="1000" src="images/doctor.webp" alt="江欣樺營養師">
-		 <div class="dialog "  data-aos="fade-down" data-aos-duration="1000"><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
+         <img  src="images/doctor.webp" alt="江欣樺營養師">
+		 <div class="dialog " ><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
 		 <div class="logline"></div>
 		</div>
 	     </div>
