--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 			<div class="logo"><a id="bt-kv"><img src="images/logo.png" alt="康健X營養師輕食"></a></div>
 			<div class="navigation">
 				<ul>
-					<li><a id="nav-section1" href="#chaos" >益生菌亂象</a></li>
-					<li><a id="nav-section2" href="#knowhow" >益生菌革命</a></li>
-					<li><a id="nav-section3"  href="#data">保健食品食用指南</a></li>
-					<li><a id="nav-section4"  href="#article">精選文章</a></li>
-					<li><a id="nav-section5" href="#more">關於營養師輕食</a></li>
+					<li><a id="nav-section1"  >益生菌亂象</a></li>
+					<li><a id="nav-section2"  >益生菌革命</a></li>
+					<li><a id="nav-section3"  >保健食品食用指南</a></li>
+					<li><a id="nav-section4"  >精選文章</a></li>
+					<li><a id="nav-section5" >關於營養師輕食</a></li>
 				</ul>
 			</div>
 			<div class="clear"></div>
@@ -61,15 +61,15 @@
 	<!--kv-->
 	<div class="maincheck " id="kv">
 		<div class="contain flex">
-		<div class="title">
+		<div class="title animated fadeInDown">
 			<h1>益生菌<br>革命</h1>
 			<h2>保健食品全解析</h2>
 			<p>市面上益生菌產品參差不齊，常見菌數標示不實、誇大療效，甚至還有濫用輕瀉劑造成食用者傷害的問題。</p>
 			<p>而營養師輕食的負責人-江欣樺擁有10年預防醫學背景，以及保健食品研發實戰經驗，帶你破解益生菌的社會亂象，一場由益生菌作為前哨站的保健食品革命就此展開。</p>  
 		</div>
 	   <div class="doctor">
-         <img  src="images/doctor.webp" alt="江欣樺營養師">
-		 <div class="dialog " ><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
+         <img class="animated fadeInUp"  src="images/doctor.webp" alt="江欣樺營養師">
+		 <div class="dialog animated fadeInUp" ><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
 		 <div class="logline"></div>
 		</div>
 	     </div>
