--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<!--kv-->
 	<div class="maincheck " id="kv">
 		<div class="contain flex">
-		<div class="title animated fadeInDown">
+		<div class="title animated fadeIndown">
 			<h1>益生菌<br>革命</h1>
 			<h2>保健食品全解析</h2>
 			<p>市面上益生菌產品參差不齊，常見菌數標示不實、誇大療效，甚至還有濫用輕瀉劑造成食用者傷害的問題。</p>
