--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		</div>
 	   <div class="doctor">
          <img class="animated fadeInUp"  src="images/doctor.webp" alt="江欣樺營養師">
-		 <div class="dialog animated fadeIndown" ><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
+		 <div class="dialog " ><p>最<strong>專業</strong>的<br>保健食品指南網站！</p> 
 		 <div class="logline"></div>
 		</div>
 	     </div>
