--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="css/owl.theme.default.css" />
 <link rel="stylesheet" type="text/css" href="css/owl.carousel.css" />
 <link rel="stylesheet" type="text/css" href="css/aos.css" />
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css?t=1" />
  <!-- Google Tag Manager --> 
  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': 
 	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], 
