--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 							  <div class="tabcontent flex  flex_ais">
 							  <div class="content_img"><img src="images/m3-1.png" alt="雙重 IFOS 檢驗"></div>
 							  <div class="content_dec"> <p>IFOS是世界最嚴格的魚油檢測及認證機構。雙重檢驗指的是： <br>
-								<strong>1. 原油的檢驗，2. 最終產品的檢驗。</strong><br>
+								<strong>1. 原油的檢驗  2. 最終產品的檢驗。</strong><br>
 								原油在加工廠包裝的過程很有機會汙染到其他來源的原料，或是加工過程變質，雙重檢驗能夠確保魚油的安全性。</p></div>
 							</div>
 						</div>
@@ -448,7 +448,7 @@
 
 							<div class="tabcontent  flex  flex_ais">
 								<div class="content_img"><img src="images/m5-2.png" alt="標示活性單位"></div>
-								<div class="content_dec"> <p>B其實酵素跟益生菌一樣，<strong>補充「活」的才有實質幫助</strong>，透過精準定量，確保酵素功效。</p></div>
+								<div class="content_dec"> <p>其實酵素跟益生菌一樣，<strong>補充「活」的才有實質幫助</strong>，透過精準定量，確保酵素功效。</p></div>
 							  </div>
 						</div>
 					  </div>
