--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			   <div class="flex s1_box">
 			   <div class="warn "  data-aos="fade-down">
                 <div class="warn_title ">
-				<div class="icon"><img src="images/warn1.png" alt=""></div>
+				<div class="icon"><img src="images/warn1.png" alt="濫竽充數"></div>
 				<h3>濫竽充數 <span class=""></span></h3>	
 		    	</div>
 				<div class="clear"></div>
@@ -112,7 +112,7 @@
 
 			   <div class="warn"  data-aos="fade-down" data-aos-delay="100">
                 <div class="warn_title">
-				<div class="icon"><img src="images/warn2.png" alt=""></div>
+				<div class="icon"><img src="images/warn2.png" alt="成本低廉"></div>
 				<h3>成本低廉 <span></span>	</h3>
 				
 		    	</div>
@@ -125,7 +125,7 @@
 
 			   <div class="warn"  data-aos="fade-down">
                 <div class="warn_title">
-				<div class="icon"><img src="images/warn3.png" alt=""></div>
+				<div class="icon"><img src="images/warn3.png" alt="標示不實"></div>
 				<h3>標示不實	<span></span>	</h3>
 		    	</div>
 				<div class="clear"></div>
@@ -137,7 +137,7 @@
 
 			   <div class="warn"  data-aos="fade-down" data-aos-delay="100">
                 <div class="warn_title">
-				<div class="icon"><img src="images/warn4.png" alt=""></div>
+				<div class="icon"><img src="images/warn4.png" alt="輕瀉劑"></div>
 				<h3>輕瀉劑	<span></span>	</h3>		
 		    	</div>
 				<div class="clear"></div>
@@ -165,28 +165,28 @@
 	   <div class="flex s2_box">
       <div class="timeline"  data-aos="fade-down">
          <div class="flex">
-             <div class="time_num"><img src="images/1.0.png" alt=""></div>
+             <div class="time_num"><img src="images/1.0.png" alt="1.0"></div>
 			 <div class="time_dec" >
 				 <h4> <span>2019.03 </span>拒絕腸球菌  </h4>
 				 <p>早期大部分益生菌產品多有添加球菌，不過球菌爭議大，科學背景少，我們一律拒絕使用，只用「桿菌」。</p>
 			 </div>
 		 </div>
 		 <div class="flex">
-			<div class="time_num"><img src="images/2.0.png" alt=""></div>
+			<div class="time_num"><img src="images/2.0.png" alt="2.0"></div>
 			<div class="time_dec">
 				<h4> <span>2020.07 </span>拒絕食品添加物 </h4>
 				<p>吃益生菌就必須吃添加物？不！沒必要的成分我們通通都不要，只要好菌，不要負擔。</p>
 			</div>
 		</div>
 		<div class="flex">
-			<div class="time_num"><img src="images/3.0.png" alt=""></div>
+			<div class="time_num"><img src="images/3.0.png" alt="3.0"></div>
 			<div class="time_dec">
 				<h4> <span>2021.09 </span>要有保證菌數 </h4>
 				<p>出廠菌數夠高，才能做到保證菌數，沒有保證菌數，幾乎是等於說空話。</p>
 			</div>
 		</div>
 		<div class="flex">
-			<div class="time_num"><img src="images/4.0.png" alt=""></div>
+			<div class="time_num"><img src="images/4.0.png" alt="4.0"></div>
 			<div class="time_dec">
 				<h4> <span>2022.07  </span>SYNPACK S +超微氧技術</h4>
 				<p>全台首創的太空保鮮技術，給益生菌頂級環境，好菌活得多活得久，不止於保證菌數，還要更上一層樓。</p>
@@ -210,7 +210,7 @@
 	            <div class="flex s3_titlebox">
                        <div class="s3_doll" data-aos="zoom-in"><img src="images/section3_doll.png" alt=""></div>
 					   <div class="s3_title"data-aos="fade-down" >
-						<div class="med_pic" ><img src="images/medicine.png" alt=""> </div>
+						<div class="med_pic" ><img src="images/medicine.png" alt="保健食品"> </div>
 					   <h2  >保健食品食用指南</h2>
 					   <p>市面上良莠不齊的保健食品眾多，藥局在賣、網紅在賣、連自己朋友也在賣，網路又充斥沒人署名的假文章，你根本不知道誰說得對？只是吃心安？還是真的有用？
 					</p>
@@ -871,7 +871,7 @@
 <div class="contact_group flex">
     <div class="doctor_group" >
     <div class="sign">營養師輕食<img src="images/sign.png" alt="營養師輕食-江欣樺"></div>
-	<div class="contact_doctor"><img src="images/doctor.webp" alt=""></div>
+	<div class="contact_doctor"><img src="images/doctor.webp" alt="營養師輕食-江欣樺"></div>
       </div>
 	<div class="button_group">
     <div class="logo_w"><a href="https://www.dietician.com.tw/" target="_blank"></a><img src="images/logo_w.png" alt="營養師輕食"></a></div>
