--- a/index.html
+++ b/index.html
@@ -884,10 +884,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<div class="button_group">
     <div class="logo_w"><a href="https://www.dietician.com.tw/" target="_blank"></a><img src="images/logo_w.png" alt="營養師輕食"></a></div>
       <ul>
-         <li> <a href="https://www.dietician.com.tw/about/item/1274.html" target="_blank">關於我們</a></li>
-		 <li> <a href="http://nav.cx/3EtPGps" target="_blank">LINE    </a></li>
-		 <li> <a href="https://lihi1.com/pCOK4" target="_blank">PODCAST    </a></li>
-		 <li> <a href="https://bit.ly/2CQgPJy" target="_blank">YOUTUBE   </a></li>
+         <li> <a href="https://www.dietician.com.tw/about/item/1274.html" class="click_event"  data-title="dietician2023"  data-label="click-dieticiandata-about-dietician" target="_blank">關於我們</a></li>
+		 <li> <a href="http://nav.cx/3EtPGps" class="click_event"  data-title="dietician2023"  data-label="click-dieticiandata-about-line" target="_blank">LINE    </a></li>
+		 <li> <a href="https://lihi1.com/pCOK4" class="click_event"  data-title="dietician2023"  data-label="click-dieticiandata-about-podcast"  target="_blank">PODCAST    </a></li>
+		 <li> <a href="https://bit.ly/2CQgPJy"  class="click_event"  data-title="dietician2023"  data-label="click-dieticiandata-about-youtube" target="_blank">YOUTUBE   </a></li>
 
 	  </ul>
 
