--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>益生菌革命保健食品全解析 | 康健雜誌</title>
+<title>【營養師輕食】江欣樺營養師教你益生菌怎麼挑及保健食品全解析</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta content="telephone=no" name="format-detection">
-<meta name="keywords" content="老花,散光,隱形眼鏡,博士倫,老花" />
-<meta name="description" content="市面上益生菌產品參差不齊，常見菌數標示不實、誇大療效，甚至還有濫用輕瀉劑造成食用者傷害的問題。而營養師輕食的負責人-江欣樺擁有10年預防醫學背景，以及保健食品研發實戰經驗，帶你破解益生菌的社會亂象，一場由益生菌作為前哨站的保健食品革命就此展開。">
-<meta property="og:title" content="益生菌革命保健食品全解析 | 康健雜誌">
-<meta property="og:description" content="市面上益生菌產品參差不齊，常見菌數標示不實、誇大療效，甚至還有濫用輕瀉劑造成食用者傷害的問題。而營養師輕食的負責人-江欣樺擁有10年預防醫學背景，以及保健食品研發實戰經驗，帶你破解益生菌的社會亂象，一場由益生菌作為前哨站的保健食品革命就此展開。">
+<meta name="description" content="最專業的保健食品推薦指南！你知道益生菌有黑箱嗎？你買的魚油對身體有沒有害？魚油功效有哪些？孕婦綜合維他命吃多少？特邀業界的江欣樺營養師一次回答所有保健食品的問題，讓你從此不再花冤枉錢！">
+<meta property="og:title" content="【營養師輕食】江欣樺營養師教你益生菌怎麼挑及保健食品全解析">
+<meta property="og:description" content="最專業的保健食品推薦指南！你知道益生菌有黑箱嗎？你買的魚油對身體有沒有害？魚油功效有哪些？孕婦綜合維他命吃多少？特邀業界的江欣樺營養師一次回答所有保健食品的問題，讓你從此不再花冤枉錢！">
 <meta property="og:image" content="images/fb.jpg">
 <link rel="image_src" href="images/fb.jpg">
 <link rel="shortcut icon" href="https://www.commonhealth.com.tw/assets/images/favicon.ico" />
